--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My First Static Site</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f0f0f0;
+            padding: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+    </style>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+    <h1>Welcome to My First Static Site on Azure Web App!</h1>
+    <p>This is a simple welcome page to celebrate your achievement.</p>
+    <script>
+        // Optional JavaScript to add interactivity or dynamic content
+        document.addEventListener('DOMContentLoaded', function() {
+            console.log('Welcome to your new static site!');
+        });
+    </script>
 </body>
-
 </html>
